<resources>
    <string name="app_name">Open Rokiu</string>
    <string name="devices_sync">Devices</string>
    <string name="keyboard">Keyboard</string>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="contribute">Contribute</string>
    <string name="select_devices">Select device</string>
    <string name="img_tv">TV image</string>
    <string name="title_dialog_config_remote">Initial setup</string>
    <string name="description_config_remote">Enable remote control on your Roku to use this app:</string>
    <string name="go_settings">Settings → System</string>
    <string name="advance_remote_ext">Advanced → External control</string>
    <string name="active_config">Enable</string>
    <string name="warning_config_remote">Make sure your device is connected to the same Wi-Fi network as your Roku.</string>
    <string name="btn_config_ok">Got it</string>
    <string name="up">▲</string>
    <string name="left">◀</string>
    <string name="right">▶</string>
    <string name="down">▼</string>
    <string name="ok">OK</string>
    <string name="toolbar">Remote Control</string>
    <string name="send_text">Text sent</string>
    <string name="connected_by">Connected to</string>
    <string name="add_text_first">Enter text first</string>
    <string name="there_is_not_devices">No devices available</string>
    <string name="reconnected">Reconnected to </string>
    <string name="code">Source code</string>
    <string name="url_source">https://github.com/JoseLeviRivera/Open-Rokiu</string>
    <string name="url_license">https://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="url_contribute">https://github.com/JoseLeviRivera/Open-Rokiu</string>
    <string name="no_app_found">No app found to open this link</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="no_device_connected">No device connected</string>
    <string name="no_devices_found">No devices found</string>
    <string name="connected_to">Connected to </string>
    <string name="error_sending_text">Error sending text</string>
    <string name="enter_text_first">Please enter text first</string>
    <string name="add_text">Enter text</string>
    <string name="write_here">Write here</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
</resources>