<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_devices"
        android:icon="@drawable/sync_24px"
        android:title="@string/devices_sync"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_keyboard"
        android:icon="@drawable/keyboard_24px"
        android:title="@string/keyboard"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_code"
        android:title="@string/code"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_license"
        android:title="@string/license"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contribute"
        android:title="@string/contribute"
        app:showAsAction="never" />
</menu>